# backend/openapi/swagger.json
@@ -235,6 +235,46 @@
                 }
             }
         },
+        "/addWorkspace/{name}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "Creates a new workspace for the current user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "workspace name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.addWorkspaceReply"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.addWorkspaceReply"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.addWorkspaceReply"
+                        }
+                    }
+                }
+            }
+        },
         "/addWorkspaceNode/": {
             "post": {
                 "consumes": [
@@ -1919,6 +1959,37 @@
                     }
                 }
             }
+        },
+        "/workspaces/": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workspace"
+                ],
+                "summary": "List all workspaces of the current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.workspacesReply"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.workspacesReply"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.workspacesReply"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -2748,6 +2819,9 @@
                 }
             }
         },
+        "server.addWorkspaceReply": {
+            "type": "object"
+        },
         "server.addressExclusionOverviewReply": {
             "type": "object",
             "properties": {
@@ -3170,6 +3244,17 @@
                 }
             }
         },
+        "server.workspacesReply": {
+            "type": "object",
+            "properties": {
+                "workspaces": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/workspace.Workspace"
+                    }
+                }
+            }
+        },
         "status.FrontendStatus": {
             "type": "object",
             "properties": {
@@ -3222,6 +3307,29 @@
                 },
                 "type": {
                     "type": "string"
+                },
+                "uid": {
+                    "type": "string"
+                }
+            }
+        },
+        "workspace.Workspace": {
+            "type": "object",
+            "properties": {
+                "Workspace.name": {
+                    "type": "string"
+                },
+                "Workspace.state": {
+                    "type": "string"
+                },
+                "Workspace.ts": {
+                    "type": "string"
+                },
+                "dgraph.type": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "uid": {
                     "type": "string"
